--- a/Project.html
+++ b/Project.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projetos</title>
     <link rel="stylesheet" href="index.html">
-    <link rel="stylesheet" href="styleprojects.css">
+    <link rel="stylesheet" href="style.css">
 </head>
     <body>
         <nav>
