Parte contato finalizada.

--- a/index.html
+++ b/index.html
@@ -11,24 +11,20 @@
 
 <body>
     <nav>
-        <ul>
-            <li>
-                <div class="mb-4" style="margin-top: 20px;">
-                <a href="index.html" class="btn btn-outline-light mb-4">Sobre Mim</a>
+        <ul class="list-unstyled">
+            <li style="margin: 10px; display: inline-block;">
+                <a href="index.html" class="btn btn-outline-light mb-4" style="width: 150px;">Sobre Mim</a>
             </li>
-            </div>
-            <li>
-                <div class="mb-4" style="margin-top: 20px;">
-                <a href="Project.html" class="btn btn-outline-light mb-4">Projetos</a>
-                </div>
+            <li style="margin: 10px; display: inline-block;">
+                <a href="Project.html" class="btn btn-outline-light mb-4" style="width: 150px;">Projetos</a>
             </li>
-            <li>
-                <div class="mb-4" style="margin-top: 20px;">
-                <a href="Contact.html" class="btn btn-outline-light mb-4">Contato</a>
+            <li style="margin: 10px; display: inline-block;">
+                <a href="Contact.html" class="btn btn-outline-light mb-4" style="width: 150px;">Contato</a>
             </li>
-            </div>
         </ul>
     </nav>
+    
+    
 
     <header>
         <div class="center">
