--- a/Contact.html
+++ b/Contact.html
@@ -4,25 +4,40 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contato</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="stylecontact.css">
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body class="bg-dark text-light">
 
     <nav>
-        <ul>
-            <li><a href="index.html">Início</a></li>
-            <li><a href="contato.html">Contato</a></li>
+        <ul class="list-unstyled">
+            <li style="margin: 10px; display: inline-block;">
+                <div class="mb-4" style="margin-top: 20px;">
+                    <a href="index.html" class="btn btn-outline-light mb-4" style="width: 150px;">Sobre Mim</a>
+                </div>
+            </li>
+            <li style="margin: 10px; display: inline-block;">
+                <div class="mb-4" style="margin-top: 20px;">
+                    <a href="Contact.html" class="btn btn-outline-light mb-4" style="width: 150px;">Contato</a>
+                </div>
+            </li>
         </ul>
     </nav>
+    
 
-        <div class="informacoes-contato">
-            <h2>Informações de Contato</h2>
-            <p><strong>E-mail:</strong> lucasmartinssrezende01@gmail.com</p>
-            <p><strong>Telefone:</strong> (55) 11 94786-7559</p>
-            <p><strong>Endereço:</strong> Taboão Da Serra - São Paulo </p>       
-        </div>
+    <div class="container mt-5 text-center">
+        <h2>Informações de Contato</h2><br>
+
+        <p><strong>E-mail:</strong> lucasmartinssrezende01@gmail.com</p>
+        <p><strong>Telefone:</strong> (55) 11 94786-7559</p>
+        <p><strong>Endereço:</strong> Taboão Da Serra - São Paulo</p>
+        <p>
+            <a href="https://wa.me/5511947867559?text=Olá,%20gostaria%20de%20entrar%20em%20contato!" class="btn btn-outline-light mb-4">
+            Entrar em contato
+            </a>
+        </p>
     </div>
-
+    
 </body>
 </html>
