--- a/Project.html
+++ b/Project.html
@@ -9,15 +9,15 @@
 </head>
 <body>
     <nav>
-        <ul>
-            <li>
+        <ul class="list-unstyled">
+            <li style="margin: 10px; display: inline-block;">
                 <div class="mb-4" style="margin-top: 20px;">
-                    <a href="index.html" class="btn btn-outline-light mb-4">Sobre Mim</a>
+                    <a href="index.html" class="btn btn-outline-light mb-4" style="width: 150px;">Sobre Mim</a>
                 </div>
             </li>
-            <li>
+            <li style="margin: 10px; display: inline-block;">
                 <div class="mb-4" style="margin-top: 20px;">
-                    <a href="Contact.html" class="btn btn-outline-light mb-4">Contato</a>
+                    <a href="Contact.html" class="btn btn-outline-light mb-4" style="width: 150px;">Contato</a>
                 </div>
             </li>
         </ul>
