--- a/index.html
+++ b/index.html
@@ -52,6 +52,11 @@
                 </div>
                 <br>
                 <div>
+                    <strong>JavaScript: explorando a linguagem</strong><br>
+                    Certificado: <a href="https://cursos.alura.com.br/certificate/cdcf133a-f9c8-45bc-9fca-0562fc76507d?lang" target="_blank" rel="noopener noreferrer">Ver Certificado</a>
+                </div>
+                <br>
+                <div>
                     <strong>Imersão em Front End da Alura</strong><br>
                     Certificado: <a href="https://cursos.alura.com.br/user/lucasmartinssrezende01/immersion/certificate/9795" target="_blank" rel="noopener noreferrer">Ver Certificado</a>
                 </div>
@@ -87,5 +92,6 @@
         </a>
     </footer>
     
+    <src></src>
 </body>
 </html>
