Alterações no projeto

--- a/Project.html
+++ b/Project.html
@@ -29,11 +29,11 @@
         <div class="row">
             <div class="col-md-4 mb-4">
                 <div class="card">
-                    <img src="./img/project_one.png" alt="Print do Projeto 1" class="card-img-top" style="border-radius: 8px;">
+                    <img src="./img/jogoSecreto.png" alt="Print do Projeto 1" class="card-img-top" style="border-radius: 8px;">
                     <div class="card-body">
-                        <h5 class="card-title">Repositório do curso "HTML, CSS e JS na Prática" da Alura, com foco em estilo avançado, posicionamento, e uma introdução breve ao React.</h5>
-                        <p class="card-text">Módulos Destacados: HTML, CSS, JavaScript, Estilo Avançado, Flexbox, Grid, Responsividade, Manipulação do DOM, Introdução ao React.</p>
-                        <a href="https://lucaas011.github.io/-imersao-Front-End-alura-2024/" target="_blank" class="btn btn-primary">Ver Projeto Completo</a>
+                        <h5 class="card-title">Jogo de Adivinhação</h5>
+                        <p class="card-text">Módulos Destacados: JavaScript, HTML, CSS, Lógica de Jogo, Geração de Números Aleatórios, Manipulação de Eventos, Estilo Responsivo, Feedback Interativo, Controle de Fluxo.</p>
+                        <a href="https://lucaas011.github.io/Jogo-adivinhacao/" target="_blank" class="btn btn-primary">Ver Projeto Completo</a>
                     </div>
                 </div>
             </div>
@@ -55,12 +55,6 @@
                     <div class="card-body">
                         <h5 class="card-title">Projeto de Intensiva - Áudio Book</h5>
                         <p class="card-text">Tecnologias: HTML, CSS, JavaScript e Bootstrap. Projeto de Audio Book criado em imersão, aplicando fundamentos de desenvolvimento web e responsividade.
-
-
-
-
-
-
                         </p>
                         <a href="https://lucaas011.github.io/Intensiva-JS/"  target="_blank" class="btn btn-primary">Ver Projeto Completo</a>
                     </div>
